<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IT Services Company</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtSplash">3iTABS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="txtitabs">Innovative Intelligence in Technolgy and Business Solutions</string>
    <string name="txtSoftware">Software Services</string>
    <string name="txtHardware">Hardware Services</string>
    <string name="txtHours">Enter number of Hours</string>
    <string name="txtOnsite">Onsite</string>
    <string name="txtRemote">Remote</string>
    <string name="btnCalculate">Calculate</string>
    <string name="txtWebsite">Full Website</string>
    <string name="txtContact">Contact Details</string>
    <string name="txtPhone">Phone - (414)-204-3156</string>
    <string name="txtEmail">Email - arun@3iTABS.com</string>
    <string name="txtWeb">Website - http://www.3iTABS.com</string>
    <string name="txtSlogan">IT Services @ affordable rates</string>
    <string name="txtResult"/>

</resources>
