<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/txtContact"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtResult"
        android:layout_below="@+id/txtResult"
        android:layout_marginTop="2dp"
        android:text="@string/txtEmail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:gravity="center"
        android:text="@string/txtitabs"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#009acd"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:text="@string/txtPhone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="2dp"
        android:text="@string/txtWeb"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/txtSlogan"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffa500" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtResult"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:text="@string/txtSplash"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000"
        android:textSize="30sp" />

</RelativeLayout>
